output/y.output
State 191 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 Programa: Cabecera_programa bloque

    2 $@1: %empty

    3 bloque: LEFT_KEY $@1 inbloque RIGHT_KEY

    4 inbloque: Declar_de_variables_locales Declar_de_subprogs Sentencias
    5         | Declar_de_variables_locales Declar_de_subprogs

    6 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    7                   | %empty

    8 $@2: %empty

    9 Declar_subprog: Cabecera_subprograma $@2 bloque

   10 $@3: %empty

   11 Declar_de_variables_locales: INITVAR $@3 Variables_locales ENDVAR
   12                            | %empty

   13 Cabecera_programa: MAIN LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

   14 Variables_locales: Variables_locales Cuerpo_declar_variables
   15                  | Cuerpo_declar_variables

   16 Cuerpo_declar_variables: tipo list_id SEMICOLON
   17                        | error

   18 @4: %empty

   19 $@5: %empty

   20 $@6: %empty

   21 Cabecera_subprograma: tipo @4 ID $@5 $@6 LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

   22 argumentos: argumentos COMA argumento
   23           | argumento
   24           | %empty

   25 argumento: tipo ID

   26 $@7: %empty

   27 Sentencias: Sentencias $@7 Sentencia

   28 $@8: %empty

   29 Sentencias: $@8 Sentencia

   30 Sentencia: bloque
   31          | sentencia_contador
   32          | sentencia_asignacion
   33          | sentencia_if
   34          | sentencia_while
   35          | sentencia_entrada
   36          | sentencia_salida
   37          | sentencia_return
   38          | sentencia_for
   39          | sentencia_list

   40 sentencia_contador: PLUSPLUS expresion SEMICOLON
   41                   | MINUSMINUS expresion SEMICOLON
   42                   | expresion PLUSPLUS SEMICOLON
   43                   | expresion MINUSMINUS SEMICOLON

   44 sentencia_asignacion: ID ASSIGN expresion SEMICOLON

   45 sentencia_if: IF LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia
   46             | IF LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia ELSE Sentencia

   47 sentencia_while: WHILE LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS Sentencia

   48 sentencia_entrada: IN CADENA list_id SEMICOLON
   49                  | IN list_id SEMICOLON

   50 sentencia_salida: OUT list_expresiones_o_cadena SEMICOLON

   51 @9: %empty

   52 sentencia_return: RETURN expresion @9 SEMICOLON

   53 sentencia_for: FOR ID ASSIGN_FOR constante TO constante DO bloque

   54 sentencia_list: expresion LIST_OP
   55               | DOLLAR expresion

   56 expresion: NEG expresion
   57          | COUNT expresion
   58          | QUEST expresion
   59          | SYMBOL_OP expresion
   60          | expresion SYMBOL_OP expresion
   61          | expresion BINARY_OP expresion
   62          | expresion BINARY_LIST_OP_I expresion
   63          | expresion BINARY_LIST_OP_L expresion
   64          | expresion AND_OP expresion
   65          | expresion OR_OP expresion
   66          | expresion XOR_OP expresion
   67          | expresion RELATION_OP expresion
   68          | expresion EQUALS_OP expresion
   69          | expresion AT expresion
   70          | expresion MINUSMINUS expresion
   71          | ID
   72          | constante
   73          | funcion
   74          | expresion PLUSPLUS expresion AT AT expresion
   75          | LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS
   76          | error

   77 funcion: ID LEFT_PARENTHESIS list_expresiones RIGHT_PARENTHESIS
   78        | ID LEFT_PARENTHESIS RIGHT_PARENTHESIS

   79 list_expresiones_o_cadena: list_expresiones_o_cadena COMA exp_cad
   80                          | exp_cad

   81 exp_cad: expresion
   82        | CADENA

   83 constante: CONST_INT
   84          | CONST_DOUBLE
   85          | CONST_CHAR
   86          | CONST_BOOLEAN
   87          | const_list_int
   88          | const_list_double
   89          | const_list_boolean
   90          | const_list_char

   91 list_expresiones: list_expresiones COMA expresion
   92                 | expresion

   93 tipo: tipo_elemental
   94     | LIST_OF tipo_elemental

   95 tipo_elemental: BASIC_TYPES

   96 const_list_int: LEFT_BRACKET list_int RIGHT_BRACKET

   97 list_int: list_int COMA CONST_INT
   98         | CONST_INT

   99 const_list_double: LEFT_BRACKET list_double RIGHT_BRACKET

  100 list_double: list_double COMA CONST_DOUBLE
  101            | CONST_DOUBLE

  102 const_list_boolean: LEFT_BRACKET list_boolean RIGHT_BRACKET

  103 list_boolean: list_boolean COMA CONST_BOOLEAN
  104             | CONST_BOOLEAN

  105 const_list_char: LEFT_BRACKET list_char RIGHT_BRACKET

  106 list_char: list_char COMA CONST_CHAR
  107          | CONST_CHAR

  108 list_id: list_id COMA ID
  109        | ID
  110        | error


Terminals, with rules where they appear

$end (0) 0
error (256) 17 76 110
MAIN (258) 13
RIGHT_PARENTHESIS (259) 13 21 45 46 47 75 77 78
LEFT_KEY (260) 3
RIGHT_KEY (261) 3
LEFT_BRACKET (262) 96 99 102 105
RIGHT_BRACKET (263) 96 99 102 105
SEMICOLON (264) 16 40 41 42 43 44 48 49 50 52
COMA (265) 22 79 91 97 100 103 106 108
ASSIGN (266) 44
IF (267) 45 46
THEN (268) 45 46
ELSE (269) 46
WHILE (270) 47
RETURN (271) 52
FOR (272) 53
ASSIGN_FOR (273) 53
TO (274) 53
DO (275) 53
OUT (276) 50
IN (277) 48 49
INITVAR (278) 11
ENDVAR (279) 11
LIST_OF (280) 94
BASIC_TYPES (281) 95
CADENA (282) 48 82
OR_OP (283) 65
AND_OP (284) 64
XOR_OP (285) 66
EQUALS_OP (286) 68
RELATION_OP (287) 67
SYMBOL_OP (288) 59 60
BINARY_OP (289) 61
BINARY_LIST_OP_I (290) 62
BINARY_LIST_OP_L (291) 63
NEG (292) 56
COUNT (293) 57
QUEST (294) 58
MINUSMINUS (295) 41 43 70
PLUSPLUS (296) 40 42 74
DOLLAR (297) 55
LIST_OP (298) 54
AT (299) 69 74
CONST_INT (300) 83 97 98
CONST_DOUBLE (301) 84 100 101
CONST_BOOLEAN (302) 86 103 104
CONST_CHAR (303) 85 106 107
ID (304) 21 25 44 53 71 77 78 108 109
LEFT_PARENTHESIS (305) 13 21 45 46 47 75 77 78


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
Programa (52)
    on left: 1, on right: 0
bloque (53)
    on left: 3, on right: 1 9 30 53
$@1 (54)
    on left: 2, on right: 3
inbloque (55)
    on left: 4 5, on right: 3
Declar_de_subprogs (56)
    on left: 6 7, on right: 4 5 6
Declar_subprog (57)
    on left: 9, on right: 6
$@2 (58)
    on left: 8, on right: 9
Declar_de_variables_locales (59)
    on left: 11 12, on right: 4 5
$@3 (60)
    on left: 10, on right: 11
Cabecera_programa (61)
    on left: 13, on right: 1
Variables_locales (62)
    on left: 14 15, on right: 11 14
Cuerpo_declar_variables (63)
    on left: 16 17, on right: 14 15
Cabecera_subprograma (64)
    on left: 21, on right: 9
@4 (65)
    on left: 18, on right: 21
$@5 (66)
    on left: 19, on right: 21
$@6 (67)
    on left: 20, on right: 21
argumentos (68)
    on left: 22 23 24, on right: 13 21 22
argumento (69)
    on left: 25, on right: 22 23
Sentencias (70)
    on left: 27 29, on right: 4 27
$@7 (71)
    on left: 26, on right: 27
$@8 (72)
    on left: 28, on right: 29
Sentencia (73)
    on left: 30 31 32 33 34 35 36 37 38 39, on right: 27 29 45 46 47
sentencia_contador (74)
    on left: 40 41 42 43, on right: 31
sentencia_asignacion (75)
    on left: 44, on right: 32
sentencia_if (76)
    on left: 45 46, on right: 33
sentencia_while (77)
    on left: 47, on right: 34
sentencia_entrada (78)
    on left: 48 49, on right: 35
sentencia_salida (79)
    on left: 50, on right: 36
sentencia_return (80)
    on left: 52, on right: 37
@9 (81)
    on left: 51, on right: 52
sentencia_for (82)
    on left: 53, on right: 38
sentencia_list (83)
    on left: 54 55, on right: 39
expresion (84)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76, on right: 40 41 42 43 44 45 46 47 52 54 55 56 57 58 59
    60 61 62 63 64 65 66 67 68 69 70 74 75 81 91 92
funcion (85)
    on left: 77 78, on right: 73
list_expresiones_o_cadena (86)
    on left: 79 80, on right: 50 79
exp_cad (87)
    on left: 81 82, on right: 79 80
constante (88)
    on left: 83 84 85 86 87 88 89 90, on right: 53 72
list_expresiones (89)
    on left: 91 92, on right: 77 91
tipo (90)
    on left: 93 94, on right: 16 21 25
tipo_elemental (91)
    on left: 95, on right: 93 94
const_list_int (92)
    on left: 96, on right: 87
list_int (93)
    on left: 97 98, on right: 96 97
const_list_double (94)
    on left: 99, on right: 88
list_double (95)
    on left: 100 101, on right: 99 100
const_list_boolean (96)
    on left: 102, on right: 89
list_boolean (97)
    on left: 103 104, on right: 102 103
const_list_char (98)
    on left: 105, on right: 90
list_char (99)
    on left: 106 107, on right: 105 106
list_id (100)
    on left: 108 109 110, on right: 16 48 49 108


State 0

    0 $accept: . Programa $end

    MAIN  shift, and go to state 1

    Programa           go to state 2
    Cabecera_programa  go to state 3


State 1

   13 Cabecera_programa: MAIN . LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 4


State 2

    0 $accept: Programa . $end

    $end  shift, and go to state 5


State 3

    1 Programa: Cabecera_programa . bloque

    LEFT_KEY  shift, and go to state 6

    bloque  go to state 7


State 4

   13 Cabecera_programa: MAIN LEFT_PARENTHESIS . argumentos RIGHT_PARENTHESIS

    LIST_OF      shift, and go to state 8
    BASIC_TYPES  shift, and go to state 9

    $default  reduce using rule 24 (argumentos)

    argumentos      go to state 10
    argumento       go to state 11
    tipo            go to state 12
    tipo_elemental  go to state 13


State 5

    0 $accept: Programa $end .

    $default  accept


State 6

    3 bloque: LEFT_KEY . $@1 inbloque RIGHT_KEY

    $default  reduce using rule 2 ($@1)

    $@1  go to state 14


State 7

    1 Programa: Cabecera_programa bloque .

    $default  reduce using rule 1 (Programa)


State 8

   94 tipo: LIST_OF . tipo_elemental

    BASIC_TYPES  shift, and go to state 9

    tipo_elemental  go to state 15


State 9

   95 tipo_elemental: BASIC_TYPES .

    $default  reduce using rule 95 (tipo_elemental)


State 10

   13 Cabecera_programa: MAIN LEFT_PARENTHESIS argumentos . RIGHT_PARENTHESIS
   22 argumentos: argumentos . COMA argumento

    RIGHT_PARENTHESIS  shift, and go to state 16
    COMA               shift, and go to state 17


State 11

   23 argumentos: argumento .

    $default  reduce using rule 23 (argumentos)


State 12

   25 argumento: tipo . ID

    ID  shift, and go to state 18


State 13

   93 tipo: tipo_elemental .

    $default  reduce using rule 93 (tipo)


State 14

    3 bloque: LEFT_KEY $@1 . inbloque RIGHT_KEY

    INITVAR  shift, and go to state 19

    $default  reduce using rule 12 (Declar_de_variables_locales)

    inbloque                     go to state 20
    Declar_de_variables_locales  go to state 21


State 15

   94 tipo: LIST_OF tipo_elemental .

    $default  reduce using rule 94 (tipo)


State 16

   13 Cabecera_programa: MAIN LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS .

    $default  reduce using rule 13 (Cabecera_programa)


State 17

   22 argumentos: argumentos COMA . argumento

    LIST_OF      shift, and go to state 8
    BASIC_TYPES  shift, and go to state 9

    argumento       go to state 22
    tipo            go to state 12
    tipo_elemental  go to state 13


State 18

   25 argumento: tipo ID .

    $default  reduce using rule 25 (argumento)


State 19

   11 Declar_de_variables_locales: INITVAR . $@3 Variables_locales ENDVAR

    $default  reduce using rule 10 ($@3)

    $@3  go to state 23


State 20

    3 bloque: LEFT_KEY $@1 inbloque . RIGHT_KEY

    RIGHT_KEY  shift, and go to state 24


State 21

    4 inbloque: Declar_de_variables_locales . Declar_de_subprogs Sentencias
    5         | Declar_de_variables_locales . Declar_de_subprogs

    $default  reduce using rule 7 (Declar_de_subprogs)

    Declar_de_subprogs  go to state 25


State 22

   22 argumentos: argumentos COMA argumento .

    $default  reduce using rule 22 (argumentos)


State 23

   11 Declar_de_variables_locales: INITVAR $@3 . Variables_locales ENDVAR

    error        shift, and go to state 26
    LIST_OF      shift, and go to state 8
    BASIC_TYPES  shift, and go to state 9

    Variables_locales        go to state 27
    Cuerpo_declar_variables  go to state 28
    tipo                     go to state 29
    tipo_elemental           go to state 13


State 24

    3 bloque: LEFT_KEY $@1 inbloque RIGHT_KEY .

    $default  reduce using rule 3 (bloque)


State 25

    4 inbloque: Declar_de_variables_locales Declar_de_subprogs . Sentencias
    5         | Declar_de_variables_locales Declar_de_subprogs .
    6 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    LIST_OF      shift, and go to state 8
    BASIC_TYPES  shift, and go to state 9

    RIGHT_KEY  reduce using rule 5 (inbloque)
    $default   reduce using rule 28 ($@8)

    Declar_subprog        go to state 30
    Cabecera_subprograma  go to state 31
    Sentencias            go to state 32
    $@8                   go to state 33
    tipo                  go to state 34
    tipo_elemental        go to state 13


State 26

   17 Cuerpo_declar_variables: error .

    $default  reduce using rule 17 (Cuerpo_declar_variables)


State 27

   11 Declar_de_variables_locales: INITVAR $@3 Variables_locales . ENDVAR
   14 Variables_locales: Variables_locales . Cuerpo_declar_variables

    error        shift, and go to state 26
    ENDVAR       shift, and go to state 35
    LIST_OF      shift, and go to state 8
    BASIC_TYPES  shift, and go to state 9

    Cuerpo_declar_variables  go to state 36
    tipo                     go to state 29
    tipo_elemental           go to state 13


State 28

   15 Variables_locales: Cuerpo_declar_variables .

    $default  reduce using rule 15 (Variables_locales)


State 29

   16 Cuerpo_declar_variables: tipo . list_id SEMICOLON

    error  shift, and go to state 37
    ID     shift, and go to state 38

    list_id  go to state 39


State 30

    6 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce using rule 6 (Declar_de_subprogs)


State 31

    9 Declar_subprog: Cabecera_subprograma . $@2 bloque

    $default  reduce using rule 8 ($@2)

    $@2  go to state 40


State 32

    4 inbloque: Declar_de_variables_locales Declar_de_subprogs Sentencias .
   27 Sentencias: Sentencias . $@7 Sentencia

    RIGHT_KEY  reduce using rule 4 (inbloque)
    $default   reduce using rule 26 ($@7)

    $@7  go to state 41


State 33

   29 Sentencias: $@8 . Sentencia

    error             shift, and go to state 42
    LEFT_KEY          shift, and go to state 6
    LEFT_BRACKET      shift, and go to state 43
    IF                shift, and go to state 44
    WHILE             shift, and go to state 45
    RETURN            shift, and go to state 46
    FOR               shift, and go to state 47
    OUT               shift, and go to state 48
    IN                shift, and go to state 49
    SYMBOL_OP         shift, and go to state 50
    NEG               shift, and go to state 51
    COUNT             shift, and go to state 52
    QUEST             shift, and go to state 53
    MINUSMINUS        shift, and go to state 54
    PLUSPLUS          shift, and go to state 55
    DOLLAR            shift, and go to state 56
    CONST_INT         shift, and go to state 57
    CONST_DOUBLE      shift, and go to state 58
    CONST_BOOLEAN     shift, and go to state 59
    CONST_CHAR        shift, and go to state 60
    ID                shift, and go to state 61
    LEFT_PARENTHESIS  shift, and go to state 62

    bloque                go to state 63
    Sentencia             go to state 64
    sentencia_contador    go to state 65
    sentencia_asignacion  go to state 66
    sentencia_if          go to state 67
    sentencia_while       go to state 68
    sentencia_entrada     go to state 69
    sentencia_salida      go to state 70
    sentencia_return      go to state 71
    sentencia_for         go to state 72
    sentencia_list        go to state 73
    expresion             go to state 74
    funcion               go to state 75
    constante             go to state 76
    const_list_int        go to state 77
    const_list_double     go to state 78
    const_list_boolean    go to state 79
    const_list_char       go to state 80


State 34

   21 Cabecera_subprograma: tipo . @4 ID $@5 $@6 LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

    $default  reduce using rule 18 (@4)

    @4  go to state 81


State 35

   11 Declar_de_variables_locales: INITVAR $@3 Variables_locales ENDVAR .

    $default  reduce using rule 11 (Declar_de_variables_locales)


State 36

   14 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce using rule 14 (Variables_locales)


State 37

  110 list_id: error .

    $default  reduce using rule 110 (list_id)


State 38

  109 list_id: ID .

    $default  reduce using rule 109 (list_id)


State 39

   16 Cuerpo_declar_variables: tipo list_id . SEMICOLON
  108 list_id: list_id . COMA ID

    SEMICOLON  shift, and go to state 82
    COMA       shift, and go to state 83


State 40

    9 Declar_subprog: Cabecera_subprograma $@2 . bloque

    LEFT_KEY  shift, and go to state 6

    bloque  go to state 84


State 41

   27 Sentencias: Sentencias $@7 . Sentencia

    error             shift, and go to state 42
    LEFT_KEY          shift, and go to state 6
    LEFT_BRACKET      shift, and go to state 43
    IF                shift, and go to state 44
    WHILE             shift, and go to state 45
    RETURN            shift, and go to state 46
    FOR               shift, and go to state 47
    OUT               shift, and go to state 48
    IN                shift, and go to state 49
    SYMBOL_OP         shift, and go to state 50
    NEG               shift, and go to state 51
    COUNT             shift, and go to state 52
    QUEST             shift, and go to state 53
    MINUSMINUS        shift, and go to state 54
    PLUSPLUS          shift, and go to state 55
    DOLLAR            shift, and go to state 56
    CONST_INT         shift, and go to state 57
    CONST_DOUBLE      shift, and go to state 58
    CONST_BOOLEAN     shift, and go to state 59
    CONST_CHAR        shift, and go to state 60
    ID                shift, and go to state 61
    LEFT_PARENTHESIS  shift, and go to state 62

    bloque                go to state 63
    Sentencia             go to state 85
    sentencia_contador    go to state 65
    sentencia_asignacion  go to state 66
    sentencia_if          go to state 67
    sentencia_while       go to state 68
    sentencia_entrada     go to state 69
    sentencia_salida      go to state 70
    sentencia_return      go to state 71
    sentencia_for         go to state 72
    sentencia_list        go to state 73
    expresion             go to state 74
    funcion               go to state 75
    constante             go to state 76
    const_list_int        go to state 77
    const_list_double     go to state 78
    const_list_boolean    go to state 79
    const_list_char       go to state 80


State 42

   76 expresion: error .

    $default  reduce using rule 76 (expresion)


State 43

   96 const_list_int: LEFT_BRACKET . list_int RIGHT_BRACKET
   99 const_list_double: LEFT_BRACKET . list_double RIGHT_BRACKET
  102 const_list_boolean: LEFT_BRACKET . list_boolean RIGHT_BRACKET
  105 const_list_char: LEFT_BRACKET . list_char RIGHT_BRACKET

    CONST_INT      shift, and go to state 86
    CONST_DOUBLE   shift, and go to state 87
    CONST_BOOLEAN  shift, and go to state 88
    CONST_CHAR     shift, and go to state 89

    list_int      go to state 90
    list_double   go to state 91
    list_boolean  go to state 92
    list_char     go to state 93


State 44

   45 sentencia_if: IF . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia
   46             | IF . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia ELSE Sentencia

    LEFT_PARENTHESIS  shift, and go to state 94


State 45

   47 sentencia_while: WHILE . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS Sentencia

    LEFT_PARENTHESIS  shift, and go to state 95


State 46

   52 sentencia_return: RETURN . expresion @9 SEMICOLON

    error             shift, and go to state 42
    LEFT_BRACKET      shift, and go to state 43
    SYMBOL_OP         shift, and go to state 50
    NEG               shift, and go to state 51
    COUNT             shift, and go to state 52
    QUEST             shift, and go to state 53
    CONST_INT         shift, and go to state 57
    CONST_DOUBLE      shift, and go to state 58
    CONST_BOOLEAN     shift, and go to state 59
    CONST_CHAR        shift, and go to state 60
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 62

    expresion           go to state 97
    funcion             go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 47

   53 sentencia_for: FOR . ID ASSIGN_FOR constante TO constante DO bloque

    ID  shift, and go to state 98


State 48

   50 sentencia_salida: OUT . list_expresiones_o_cadena SEMICOLON

    error             shift, and go to state 42
    LEFT_BRACKET      shift, and go to state 43
    CADENA            shift, and go to state 99
    SYMBOL_OP         shift, and go to state 50
    NEG               shift, and go to state 51
    COUNT             shift, and go to state 52
    QUEST             shift, and go to state 53
    CONST_INT         shift, and go to state 57
    CONST_DOUBLE      shift, and go to state 58
    CONST_BOOLEAN     shift, and go to state 59
    CONST_CHAR        shift, and go to state 60
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 62

    expresion                  go to state 100
    funcion                    go to state 75
    list_expresiones_o_cadena  go to state 101
    exp_cad                    go to state 102
    constante                  go to state 76
    const_list_int             go to state 77
    const_list_double          go to state 78
    const_list_boolean         go to state 79
    const_list_char            go to state 80


State 49

   48 sentencia_entrada: IN . CADENA list_id SEMICOLON
   49                  | IN . list_id SEMICOLON

    error   shift, and go to state 37
    CADENA  shift, and go to state 103
    ID      shift, and go to state 38

    list_id  go to state 104


State 50

   59 expresion: SYMBOL_OP . expresion

    error             shift, and go to state 42
    LEFT_BRACKET      shift, and go to state 43
    SYMBOL_OP         shift, and go to state 50
    NEG               shift, and go to state 51
    COUNT             shift, and go to state 52
    QUEST             shift, and go to state 53
    CONST_INT         shift, and go to state 57
    CONST_DOUBLE      shift, and go to state 58
    CONST_BOOLEAN     shift, and go to state 59
    CONST_CHAR        shift, and go to state 60
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 62

    expresion           go to state 105
    funcion             go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 51

   56 expresion: NEG . expresion

    error             shift, and go to state 42
    LEFT_BRACKET      shift, and go to state 43
    SYMBOL_OP         shift, and go to state 50
    NEG               shift, and go to state 51
    COUNT             shift, and go to state 52
    QUEST             shift, and go to state 53
    CONST_INT         shift, and go to state 57
    CONST_DOUBLE      shift, and go to state 58
    CONST_BOOLEAN     shift, and go to state 59
    CONST_CHAR        shift, and go to state 60
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 62

    expresion           go to state 106
    funcion             go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 52

   57 expresion: COUNT . expresion

    error             shift, and go to state 42
    LEFT_BRACKET      shift, and go to state 43
    SYMBOL_OP         shift, and go to state 50
    NEG               shift, and go to state 51
    COUNT             shift, and go to state 52
    QUEST             shift, and go to state 53
    CONST_INT         shift, and go to state 57
    CONST_DOUBLE      shift, and go to state 58
    CONST_BOOLEAN     shift, and go to state 59
    CONST_CHAR        shift, and go to state 60
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 62

    expresion           go to state 107
    funcion             go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 53

   58 expresion: QUEST . expresion

    error             shift, and go to state 42
    LEFT_BRACKET      shift, and go to state 43
    SYMBOL_OP         shift, and go to state 50
    NEG               shift, and go to state 51
    COUNT             shift, and go to state 52
    QUEST             shift, and go to state 53
    CONST_INT         shift, and go to state 57
    CONST_DOUBLE      shift, and go to state 58
    CONST_BOOLEAN     shift, and go to state 59
    CONST_CHAR        shift, and go to state 60
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 62

    expresion           go to state 108
    funcion             go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 54

   41 sentencia_contador: MINUSMINUS . expresion SEMICOLON

    error             shift, and go to state 42
    LEFT_BRACKET      shift, and go to state 43
    SYMBOL_OP         shift, and go to state 50
    NEG               shift, and go to state 51
    COUNT             shift, and go to state 52
    QUEST             shift, and go to state 53
    CONST_INT         shift, and go to state 57
    CONST_DOUBLE      shift, and go to state 58
    CONST_BOOLEAN     shift, and go to state 59
    CONST_CHAR        shift, and go to state 60
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 62

    expresion           go to state 109
    funcion             go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 55

   40 sentencia_contador: PLUSPLUS . expresion SEMICOLON

    error             shift, and go to state 42
    LEFT_BRACKET      shift, and go to state 43
    SYMBOL_OP         shift, and go to state 50
    NEG               shift, and go to state 51
    COUNT             shift, and go to state 52
    QUEST             shift, and go to state 53
    CONST_INT         shift, and go to state 57
    CONST_DOUBLE      shift, and go to state 58
    CONST_BOOLEAN     shift, and go to state 59
    CONST_CHAR        shift, and go to state 60
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 62

    expresion           go to state 110
    funcion             go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 56

   55 sentencia_list: DOLLAR . expresion

    error             shift, and go to state 42
    LEFT_BRACKET      shift, and go to state 43
    SYMBOL_OP         shift, and go to state 50
    NEG               shift, and go to state 51
    COUNT             shift, and go to state 52
    QUEST             shift, and go to state 53
    CONST_INT         shift, and go to state 57
    CONST_DOUBLE      shift, and go to state 58
    CONST_BOOLEAN     shift, and go to state 59
    CONST_CHAR        shift, and go to state 60
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 62

    expresion           go to state 111
    funcion             go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 57

   83 constante: CONST_INT .

    $default  reduce using rule 83 (constante)


State 58

   84 constante: CONST_DOUBLE .

    $default  reduce using rule 84 (constante)


State 59

   86 constante: CONST_BOOLEAN .

    $default  reduce using rule 86 (constante)


State 60

   85 constante: CONST_CHAR .

    $default  reduce using rule 85 (constante)


State 61

   44 sentencia_asignacion: ID . ASSIGN expresion SEMICOLON
   71 expresion: ID .
   77 funcion: ID . LEFT_PARENTHESIS list_expresiones RIGHT_PARENTHESIS
   78        | ID . LEFT_PARENTHESIS RIGHT_PARENTHESIS

    ASSIGN            shift, and go to state 112
    LEFT_PARENTHESIS  shift, and go to state 113

    $default  reduce using rule 71 (expresion)


State 62

   75 expresion: LEFT_PARENTHESIS . expresion RIGHT_PARENTHESIS

    error             shift, and go to state 42
    LEFT_BRACKET      shift, and go to state 43
    SYMBOL_OP         shift, and go to state 50
    NEG               shift, and go to state 51
    COUNT             shift, and go to state 52
    QUEST             shift, and go to state 53
    CONST_INT         shift, and go to state 57
    CONST_DOUBLE      shift, and go to state 58
    CONST_BOOLEAN     shift, and go to state 59
    CONST_CHAR        shift, and go to state 60
    ID                shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 62

    expresion           go to state 114
    funcion             go to state 75
    constante           go to state 76
    const_list_int      go to state 77
    const_list_double   go to state 78
    const_list_boolean  go to state 79
    const_list_char     go to state 80


State 63

   30 Sentencia: bloque .

    $default  reduce using rule 30 (Sentencia)


State 64

   29 Sentencias: $@8 Sentencia .

    $default  reduce using rule 29 (Sentencias)


State 65

   31 Sentencia: sentencia_contador .

    $default  reduce using rule 31 (Sentencia)


State 66

   32 Sentencia: sentencia_asignacion .

    $default  reduce using rule 32 (Sentencia)


State 67

   33 Sentencia: sentencia_if .

    $default  reduce using rule 33 (Sentencia)


State 68

   34 Sentencia: sentencia_while .

    $default  reduce using rule 34 (Sentencia)


State 69

   35 Sentencia: sentencia_entrada .

    $default  reduce using rule 35 (Sentencia)


State 70

   36 Sentencia: sentencia_salida .

    $default  reduce using rule 36 (Sentencia)


State 71

   37 Sentencia: sentencia_return .

    $default  reduce using rule 37 (Sentencia)


State 72

   38 Sentencia: sentencia_for .

    $default  reduce using rule 38 (Sentencia)


State 73

   39 Sentencia: sentencia_list .

    $default  reduce using rule 39 (Sentencia)


State 74

   42 sentencia_contador: expresion . PLUSPLUS SEMICOLON
   43                   | expresion . MINUSMINUS SEMICOLON
   54 sentencia_list: expresion . LIST_OP
   60 expresion: expresion . SYMBOL_OP expresion
   61          | expresion . BINARY_OP expresion
   62          | expresion . BINARY_LIST_OP_I expresion
   63          | expresion . BINARY_LIST_OP_L expresion
   64          | expresion . AND_OP expresion
   65          | expresion . OR_OP expresion
   66          | expresion . XOR_OP expresion
   67          | expresion . RELATION_OP expresion
   68          | expresion . EQUALS_OP expresion
   69          | expresion . AT expresion
   70          | expresion . MINUSMINUS expresion
   74          | expresion . PLUSPLUS expresion AT AT expresion

    OR_OP             shift, and go to state 115
    AND_OP            shift, and go to state 116
    XOR_OP            shift, and go to state 117
    EQUALS_OP         shift, and go to state 118
    RELATION_OP       shift, and go to state 119
    SYMBOL_OP         shift, and go to state 120
    BINARY_OP         shift, and go to state 121
    BINARY_LIST_OP_I  shift, and go to state 122
    BINARY_LIST_OP_L  shift, and go to state 123
    MINUSMINUS        shift, and go to state 124
    PLUSPLUS          shift, and go to state 125
    LIST_OP           shift, and go to state 126
    AT                shift, and go to state 127


State 75

   73 expresion: funcion .

    $default  reduce using rule 73 (expresion)


State 76

   72 expresion: constante .

    $default  reduce using rule 72 (expresion)


State 77

   87 constante: const_list_int .

    $default  reduce using rule 87 (constante)


State 78

   88 constante: const_list_double .

    $default  reduce using rule 88 (constante)


State 79

   89 constante: const_list_boolean .

    $default  reduce using rule 89 (constante)


State 80

   90 constante: const_list_char .

    $default  reduce using rule 90 (constante)


State 81

   21 Cabecera_subprograma: tipo @4 . ID $@5 $@6 LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

    ID  shift, and go to state 128


State 82

   16 Cuerpo_declar_variables: tipo list_id SEMICOLON .

    $default  reduce using rule 16 (Cuerpo_declar_variables)


State 83

  108 list_id: list_id COMA . ID

    ID  shift, and go to state 129


State 84

    9 Declar_subprog: Cabecera_subprograma $@2 bloque .

    $default  reduce using rule 9 (Declar_subprog)


State 85

   27 Sentencias: Sentencias $@7 Sentencia .

    $default  reduce using rule 27 (Sentencias)


State 86

   98 list_int: CONST_INT .

    $default  reduce using rule 98 (list_int)


State 87

  101 list_double: CONST_DOUBLE .

    $default  reduce using rule 101 (list_double)

